Немного изменён код html и css для лучшего отображения содержимого страниц

--- a/GestureDictionary/Pages/MainPage.razor
+++ b/GestureDictionary/Pages/MainPage.razor
@@ -45,12 +45,15 @@
         </div>
     </div>
 
-    <a href="/Add" class="centered-a">
-        <div class="item">
-            <img src="Images/addP.png" class="img-fluid mb-2" alt="Добавить">
-            <p class="mb-0 fs-4">Добавить новый перевод</p>
-        </div>
-    </a>
+
+    <div style="margin-left: auto;  margin-right: auto; "  class="col-md-4 mb-4">
+        <a href="/Add">
+            <div class="item" style="margin: 20px; ">
+                <img src="Images/addP.png" class="img-fluid mb-2" alt="Добавить">
+                <p class="mb-0 fs-4">Добавить новый перевод</p>
+            </div>
+        </a>
+    </div>
 </div>
 
 @code {
