Исправлена работа добавления новых жестов

--- a/GestureDictionary/Pages/AddGestures.razor
+++ b/GestureDictionary/Pages/AddGestures.razor
@@ -80,7 +80,7 @@
         }
         if (FCtrl.FileType != "video/mp4")
         {
-            _fMessage = "Выберите файл в формате .mp4";
+            _fMessage = "Выберите новый файл в формате .mp4";
             return false;
         }
 
